# MET-Museum-ML

./: .gitignore  README.md  README.txt
User Interaction Dashboard/: Image Interactions Database.sql  dashboard.py  keys.txt  populate.sql
backend/: README.md  pyproject.toml  requirements.txt  run.py
backend/admin_backend/: requirements.txt
backend/admin_dashboard/: dashboard.py  keys_example.txt
backend/admin_dashboard/database_utils/: Populate-Dashboard.sql  Use-Dashboard.sql
backend/artwork-recommendation/: requirements.txt  run.py
backend/artwork-recommendation/app/: __init__.py  met_api.py  recommender.py  routes.py
backend/artwork-recommendation/app/models/: download_model.py
backend/artwork_recommendation/: README.md  pyproject.toml  requirements.txt  run.py
backend/artwork_recommendation/app/: __init__.py  met_api.py  recommender.py  routes.py
backend/artwork_recommendation/app/models/: download_model.py
backend/artwork_recommendation/app/tests/: test_recommender.py
backend/artwork_recommendation/tests/: test_recommender.py
backend/django/: .env.example  db.sqlite3  manage.py  pyproject.toml
backend/django/api/: admin.py  models.py  serializer.py  urls.py  views.py
backend/django/api/migrations/: 0001_initial.py  0002_alter_profile_email.py  0003_artworkrating.py
backend/django/api/templates/: streamlit_dashboard.html
backend/django/met_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/education/: __init__.py  app.py  education_blueprint.py  requirements.txt
backend/tour/: __init__.py  app.py  pathfinding.py  tour_blueprint.py
backend/tour/data/: galleries.json  galleries_generator.py
backend/tour/tests/: test_app.py
front-end/: README.md
front-end/iOS-front-new/MuseumApp/MuseumApp/: MuseumAppApp.swift  MuseumTabView.swift  Styles.swift
front-end/ios-front/MuseumApp/MuseumApp/: ContentView.swift  Info.plist  MuseumTabView.swift  Styles.swift
front-end/ios-front/MuseumApp/MuseumApp.xcodeproj/: project.pbxproj
front-end/web-front/: package 2.json  package-lock.json  package.json
front-end/web-front/public/: index.html
front-end/web-front/src/: App.css  App.js  index.js
front-end/web-front/src/components/: ArtInfo.css  ArtInfo.js  ArtworkCard.css  ArtworkCard.js  ArtworkCards.css  Button.css  Button.js  Education.css  Education.js  FilterSidebar.css  FilterSidebar.js  GalleryMap.css  GalleryMap.js  HeroSection.css  HeroSection.js  InputField.css  InputField.js  Navbar.css  Navbar.js  RelatedArt.css  RelatedArt.js  RelatedArtworkCard.js
front-end/web-front/src/context/: AuthContext.js
front-end/web-front/src/pages/: Art-Search.css  Art-Search.js  Artwork-Details.css  Artwork-Details.js  Dashboard.js  Home.css  Home.js  Login.css  Login.js  My-Gallery.css  Sign-Up.js  (+4 more)
(+48 files in other folders)
