[tool.poetry]
name = "backend-environment"
version = "0.1.0"
description = "This environment contains all dependencies needed to run any functionality of the backend."
authors = ["lquincoso, doapo, Nicc727, rihhito"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
pillow = "^11.0.0"
requests = "^2.32.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
faiss-cpu = "^1.9.0.post1"
diskcache = "^5.6.3"
aiohttp = "^3.11.8"
pymysql = "^1.1.1"
streamlit = "^1.40.2"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
django = "^5.1.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
pyjwt = "^2.9.0"
python-dotenv = "^1.0.1"
django-mysql = "^4.15.0"
django-jazzmin = "^3.0.1"
cryptography = "^44.0.0"
google-generativeai = "^0.8.3"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
