[tool.poetry]
name = "artwork-recommendation"
version = "0.1.0"
description = "A Machine Learning system for recommending artworks from the MET Museum"
authors = ["lquincoso <122310652+lquincoso@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
pillow = "^11.0.0"
requests = "^2.32.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
faiss-cpu = "^1.9.0.post1"
diskcache = "^5.6.3"
aiohttp = "^3.11.7"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
